syntax = "proto3";
package command;

option swift_prefix = "";
option java_package = "com.example.todolist.model";

enum CommandType {
    Unknown = 0;
    NewTask = 3327;
    NewProject = 1947;
    RemoveTask = 3687;
    AddTask = 2150;
    RenameProject = 4662;
    RenameTask = 3442;
}

message Command {
    message NewProject {
        bytes projectID = 8589;
        string name = 7669;
        repeated bytes tasks = 2463;
    }

    message NewTask {
        bytes taskID = 3324;
        string name = 7669;
        string emoji = 5259;
    }

    message RemoveTask {
        bytes projectID = 9326;
        bytes taskID = 8534;
    }

    message AddTask {
        bytes projectID = 8326;
        bytes taskID = 4534;
    }

    message RenameProject {
        bytes projectID = 6326;
        string name = 9222;
    }

    message RenameTask {
        bytes taskID = 8326;
        string name = 9292;
        string emoji = 4494;
    }
}
