syntax = "proto3";
package viewModel;

option swift_prefix = "";
option java_package = "com.example.todolist.model";

enum LocationType {
  Unknown = 0;
  Home = 1457;
  Project = 1571;
  Task = 1648;
}

message Location {
  message Home {}
  message Project { bytes ProjectID = 2697; }
  message Task { bytes TaskID = 1717; }
  message AddTask {}
}

message ViewModel {
  message Project {
    bytes ID = 4947;
    string name = 4032;

    message Task {
      bytes ID = 5946;
      string name = 8336;
      string emoji = 9790;
    }
    repeated Task tasks = 8856;
  }

  message Task {
    bytes ID = 4987;
    string name = 4932;
    string emoji = 2651;
  }

  message Home {
    message Project {
      bytes ID = 4947;
      string name = 4032;

      message Task {
        bytes ID = 2946;
        string name = 4336;
        string emoji = 2990;
      }
      repeated Task tasks = 8856;
    }

    repeated Project projects = 6910;
  }
}
